@@ -1,3 +1,8 @@
+2009-06-16  Omair Majid  <omajid@redhat.com>
+
+	* rt/net/sourceforge/jnlp/services/ServiceUtil.java:
+	(invoke): Throw the original exception that caused the problem.
+
 2009-06-15  Lillian Angel  <langel@redhat.com>
 
 	* Makefile.am
